# LINK_01

./: .README.md.swp  LICENSE  MemoryMap.md  README.md  bus.md
code/arduino/AT28C64B/: AT28C64B.ino
code/arduino/SN74F299N/: SN74F299N.ino
code/arduino/SN74LS245N/: SN74LS245N.ino
code/arduino/_6502_Test/: _6502_Test.ino
code/arduino/mega_debugger/: mega_debugger.ino
code/asm/: .kernel.asm.swo  a.out  kernel.asm
code/pico/: .gitignore  CMakeLists.txt  busmaster.c  busmaster.h  configuration.h  ic6502.c  ic6502.h  main.c  readme.md  shifter.c  shifter.h  system.c  system.h  test.c  test.h  uart.c  uart.h  usercommand.c  usercommand.h
code/python/: helloworld.py  test.py
schematics/fritzing/: LINK_01.fzz
schematics/kicad/FullSystem/: FullSystem-cache.lib  FullSystem.sch  FullSystem.sch-bak
schematics/kicad/MegaDebugger/: MegaDebugger-cache.lib  MegaDebugger.sch
schematics/kicad/shifter_test/: fp-lib-table  shifter_test-cache.lib  shifter_test.sch  shifter_test.sch-bak  sym-lib-table
schematics/logisim-evolution/: LINK_01.circ
